tests/errors/init_state/borrow_precondition/mut_borrow_of_never_init.sim
fn f() {
  x: i64;
  r: &mut i64;
  entry:
    r = &mut x;
    return
}
